--- a/src/app/pages/user/profile/profile.component.html
+++ b/src/app/pages/user/profile/profile.component.html
@@ -3,13 +3,13 @@
     <app-page-title title="Profile" [breadcrumbItems]="breadCrumbItems"></app-page-title>
   
     <div class="row">
-      <div class="col-xl-4">
+      <div class="col-xl-12">
         <div class="card overflow-hidden">
-          <div class="bg-primary-subtle">
+          <div class="bg-danger-subtle">
             <div class="row">
               <div class="col-7">
-                <div class="text-primary p-3">
-                  <h5 class="text-primary">Welcome Back ikram!</h5>
+                <div class="text-dark p-3">
+                  <h5 class="text-dark">Welcome Back {{currentUser.lastName}} </h5>
                   <p>It will seem like simplified</p>
                 </div>
               </div>
@@ -20,12 +20,12 @@
           </div>
           <div class="card-body pt-0">
             <div class="row">
-              <div class="col-sm-4">
-                <div class="avatar-md profile-user-wid mb-4">
+              <div class="col-sm-6">
+                <div class="avatar-lg profile-user-wid mb-6">
                   <img src="assets/images/users/avatar-1.jpg" alt="" class="img-thumbnail rounded-circle">
                 </div>
-                <h5 class="font-size-15 text-truncate">Cynthia Price</h5>
-                <p class="text-muted mb-0 text-truncate">UI/UX Designer</p>
+                <h5 class="font-size-15 text-truncate">{{currentUser.lastName}} {{currentUser.lastName}}</h5>
+                <p class="text-muted mb-0 text-truncate"> {{currentUser.role}} </p>
               </div>
   
               <div class="col-sm-8">
@@ -42,8 +42,8 @@
                     </div>
                   </div>
                   <div class="mt-4">
-                    <a href="javascript: void(0);" class="btn btn-primary btn-sm">View Profile <i
-                        class="mdi mdi-arrow-right ms-1"></i></a>
+                    <a  class="btn btn-danger btn-sm "  routerLink="/user/editProfile">Edit Profile <i
+                        class="mdi mdi-arrow-right ms-1" ></i></a>
                   </div>
                 </div>
               </div>
@@ -143,97 +143,6 @@
           </div>
         </div>
         <!-- end card -->
-      </div>
-  
-      <div class="col-xl-8">
-  
-        <div class="row">
-          <div *ngFor="let stat of statData" class="col-md-4">
-            <app-stat [title]="stat.title" [value]="stat.value" [icon]="stat.icon"></app-stat>
-          </div>
-  
-        </div>
-        <div class="card">
-          <div class="card-body">
-            <h4 class="card-title mb-4">Revenue</h4>
-            <apx-chart dir="ltr" class="apex-charts" [series]="revenueBarChart.series" [chart]="revenueBarChart.chart"
-              [xaxis]="revenueBarChart.xaxis" [colors]="revenueBarChart.colors" [yaxis]="revenueBarChart.yaxis"
-              [dataLabels]="revenueBarChart.dataLabels" [stroke]="revenueBarChart.stroke"
-              [plotOptions]="revenueBarChart.plotOptions" [fill]="revenueBarChart.fill">
-            </apx-chart>
-          </div>
-        </div>
-  
-        <div class="card">
-          <div class="card-body">
-            <h4 class="card-title mb-4">My Projects</h4>
-            <div class="table-responsive">
-              <table class="table table-nowrap table-hover mb-0">
-                <thead>
-                  <tr>
-                    <th scope="col">#</th>
-                    <th scope="col">Projects</th>
-                    <th scope="col">Start Date</th>
-                    <th scope="col">Deadline</th>
-                    <th scope="col">Budget</th>
-                  </tr>
-                </thead>
-                <tbody>
-                  <tr>
-                    <th scope="row">1</th>
-                    <td>Skote admin UI</td>
-                    <td>2 Sep, 2019</td>
-                    <td>20 Oct, 2019</td>
-                    <td>$506</td>
-                  </tr>
-  
-                  <tr>
-                    <th scope="row">2</th>
-                    <td>Skote admin Logo</td>
-                    <td>1 Sep, 2019</td>
-                    <td>2 Sep, 2019</td>
-                    <td>$94</td>
-                  </tr>
-                  <tr>
-                    <th scope="row">3</th>
-                    <td>Redesign - Landing page</td>
-                    <td>21 Sep, 2019</td>
-                    <td>29 Sep, 2019</td>
-                    <td>$156</td>
-                  </tr>
-                  <tr>
-                    <th scope="row">4</th>
-                    <td>App Landing UI</td>
-                    <td>29 Sep, 2019</td>
-                    <td>04 Oct, 2019</td>
-                    <td>$122</td>
-                  </tr>
-                  <tr>
-                    <th scope="row">5</th>
-                    <td>Blog Template</td>
-                    <td>05 Oct, 2019</td>
-                    <td>16 Oct, 2019</td>
-                    <td>$164</td>
-                  </tr>
-                  <tr>
-                    <th scope="row">6</th>
-                    <td>Redesign - Multipurpose Landing</td>
-                    <td>17 Oct, 2019</td>
-                    <td>05 Nov, 2019</td>
-                    <td>$192</td>
-                  </tr>
-                  <tr>
-                    <th scope="row">7</th>
-                    <td>Logo Branding</td>
-                    <td>04 Nov, 2019</td>
-                    <td>05 Nov, 2019</td>
-                    <td>$94</td>
-                  </tr>
-                </tbody>
-              </table>
-            </div>
-          </div>
-        </div>
       </div>
     </div>
     <!-- end row -->
