--- a/src/app/layouts/footer/footer.component.html
+++ b/src/app/layouts/footer/footer.component.html
@@ -1,13 +1,8 @@
 <footer class="footer">
     <div class="container-fluid">
         <div class="row">
-            <div class="col-sm-6">
-                {{year}} © Skote.
-            </div>
-            <div class="col-sm-6">
-                <div class="text-sm-end d-none d-sm-block">
-                    Design & Develop by Themesbrand
-                </div>
+            <div class="text-center">
+                {{year}} © École supérieure privée d'ingénierie et de technologie.
             </div>
         </div>
     </div>
