--- a/src/app/authentication/authentication.component.html
+++ b/src/app/authentication/authentication.component.html
@@ -33,16 +33,11 @@
                                 <p class="text-muted">Sign in to continue to Skote.</p>
                             </div>
                         </div>
-                        <div class="text-center" *ngIf="isError">
-                            <div>
-                                <alert type="danger">
-                                <p class="text-danger">Login or password are incorrect try again</p>
-                            </alert>
-                            </div>
-                        </div>
                             <div class="mt-4">
                                 <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
-
+                                    <div class="mt-4">
+                                      <alert type="danger" *ngIf="isError" [dismissible]="false">Login or password are incorrect try again</alert>
+                                    </div>
                                     <div class="mb-3">
                                         <label for="email">Email</label>
                                         <input type="email" class="form-control" id="email" formControlName="email" [ngClass]="{ 'is-invalid': submitted && f.email.errors }" placeholder="Entre votre email">
@@ -55,7 +50,7 @@
 
                                     <div class="mb-3">
                                         <div class="float-end">
-                                            <a routerLink="/account/recoverpwd-2" class="text-muted">Mot de pass oublié ?</a>
+                                            <a routerLink="/forgetPassword" class="text-muted">Mot de pass oublié ?</a>
                                         </div>
                                         <label for="userpassword">Mot de passe</label>
                                         <div class="input-group auth-pass-inputgroup">
@@ -71,9 +66,7 @@
                                     </div>
 
                                 </form>
-                                <div class="mt-5 text-center">
-                                    <p>Don't have an account ? <a routerLink="/account/signup-2" class="fw-medium text-danger"> Signup now </a> </p>
-                                </div>
+                                
                             </div>
                         </div>
 
