--- a/src/app/pages/user/profile/EncadrantProfile/profile.component.html
+++ b/src/app/pages/user/profile/EncadrantProfile/profile.component.html
@@ -22,30 +22,10 @@
             <div class="row">
               <div class="col-sm-6">
                 <div class="avatar-lg profile-user-wid mb-6">
-                  <img src="assets/images/users/avatar-1.jpg" alt="" class="img-thumbnail rounded-circle">
+                  <img [src]="userImage" alt="user pic" class="img-thumbnail rounded-circle">
                 </div>
                 <h5 class="font-size-15 text-truncate">{{currentUser.lastName}} {{currentUser.lastName}}</h5>
                 <p class="text-muted mb-0 text-truncate"> {{currentUser.role}} </p>
-              </div>
-  
-              <div class="col-sm-8">
-                <div class="pt-4">
-  
-                  <div class="row">
-                    <div class="col-6">
-                      <h5 class="font-size-15">125</h5>
-                      <p class="text-muted mb-0">Projects</p>
-                    </div>
-                    <div class="col-6">
-                      <h5 class="font-size-15">$1245</h5>
-                      <p class="text-muted mb-0">Revenue</p>
-                    </div>
-                  </div>
-                  <div class="mt-4">
-                    <a  class="btn btn-danger btn-sm "  routerLink="/user/editProfile">Edit Profile <i
-                        class="mdi mdi-arrow-right ms-1" ></i></a>
-                  </div>
-                </div>
               </div>
             </div>
           </div>
@@ -55,27 +35,36 @@
         <div class="card">
           <div class="card-body">
             <h4 class="card-title mb-4">Personal Information</h4>
-  
-            <p class="text-muted mb-4">Hi I'm Cynthia Price,has been the industry's standard dummy text To an English
-              person, it will seem like simplified English, as a skeptical Cambridge.</p>
             <div class="table-responsive">
               <table class="table table-nowrap mb-0">
                 <tbody>
                   <tr>
                     <th scope="row">Full Name :</th>
-                    <td>Cynthia Price</td>
+                    <td> {{currentUser.lastName}} {{currentUser.lastName}} </td>
+                  </tr>
+                  <tr>
+                    <th scope="row">Company :</th>
+                    <td> {{currentUser.company}} </td>
                   </tr>
                   <tr>
                     <th scope="row">Mobile :</th>
-                    <td>(123) 123 1234</td>
+                    <td>{{currentUser.phoneNumber}}</td>
                   </tr>
                   <tr>
                     <th scope="row">E-mail :</th>
-                    <td>cynthiaskote@gmail.com</td>
+                    <td> {{currentUser.login}} </td>
                   </tr>
                   <tr>
-                    <th scope="row">Location :</th>
-                    <td>California, United States</td>
+                    <th scope="row">Professional E-mail :</th>
+                    <td> {{currentUser.emailPro}} </td>
+                  </tr>
+                  <tr>
+                    <th scope="row">Address :</th>
+                    <td> {{currentUser.address}} </td>
+                  </tr>
+                  <tr>
+                    <th scope="row">ID card :</th>
+                    <td> {{currentUser.cin}} </td>
                   </tr>
                 </tbody>
               </table>
@@ -86,7 +75,7 @@
   
         <div class="card">
           <div class="card-body">
-            <h4 class="card-title mb-5">Experience</h4>
+            <h4 class="card-title mb-5">history of last supervised internships</h4>
             <div class="">
               <ul class="verti-timeline list-unstyled">
                 <li class="event-list active">
