--- a/src/app/pages/forum/listforum/listforum.component.html
+++ b/src/app/pages/forum/listforum/listforum.component.html
@@ -33,6 +33,9 @@
               <div class="col-10" style="overflow: hidden; text-overflow: ellipsis; -webkit-line-clamp: 2; display: -webkit-box; -webkit-box-orient: vertical;">
                   <div [innerHTML]="question.content" ></div>  
               </div>
+              <div class="auth-logo mb-4 col-10">
+                <h2><strong>{{question.tag}}</strong></h2><br>
+            </div>
               <div class="d-print-none">
                 <div class="float-end list-inline wizard d-flex justify-content-end mb-0">
                   <div class="btn btn-sm font-size-18 text-center">
