--- a/src/app/pages/user/profile/EncadrantProfile/profile.component.html
+++ b/src/app/pages/user/profile/EncadrantProfile/profile.component.html
@@ -5,7 +5,7 @@
     <div class="row">
       <div class="col-xl-12">
         <div class="card overflow-hidden">
-          <div class="bg-danger-subtle">
+          <div class="bg-primary-subtle" *ngIf="currentUser.role=='CHEF_DEPARTEMENT'">
             <div class="row">
               <div class="col-7">
                 <div class="text-dark p-3">
@@ -18,14 +18,71 @@
               </div>
             </div>
           </div>
+          <div class="bg-success-subtle" *ngIf="currentUser.role=='SERVICE_STAGE'">
+            <div class="row">
+              <div class="col-7">
+                <div class="text-dark p-3">
+                  <h5 class="text-dark">Welcome Back {{currentUser.lastName}} </h5>
+                  <p>It will seem like simplified</p>
+                </div>
+              </div>
+              <div class="col-5 align-self-end">
+                <img src="assets/images/profile-img.png" alt="" class="img-fluid">
+              </div>
+            </div>
+          </div>
+          <div class="bg-warning-subtle" *ngIf="currentUser.role=='ENCADRANT'">
+            <div class="row">
+              <div class="col-7">
+                <div class="text-dark p-3">
+                  <h5 class="text-dark">Welcome Back {{currentUser.lastName}} </h5>
+                  <p>It will seem like simplified</p>
+                </div>
+              </div>
+              <div class="col-5 align-self-end">
+                <img src="assets/images/profile-img.png" alt="" class="img-fluid">
+              </div>
+            </div>
+          </div>
+          <div class="bg-danger-subtle" *ngIf="currentUser.role=='ETUDIANT'">
+            <div class="row">
+              <div class="col-7">
+                <div class="text-dark p-3">
+                  <h5 class="text-dark">Welcome Back {{currentUser.lastName}} </h5>
+                  <p>It will seem like simplified</p>
+                </div>
+              </div>
+              <div class="col-5 align-self-end">
+                <img src="assets/images/profile-img.png" alt="" class="img-fluid">
+              </div>
+            </div>
+          </div>
+
+
           <div class="card-body pt-0">
             <div class="row">
               <div class="col-sm-6">
                 <div class="avatar-lg profile-user-wid mb-6">
-                  <img [src]="userImage" alt="user pic" class="img-thumbnail rounded-circle">
+                  <img [src]="currentUser.pic" alt="user pic" class="img-thumbnail rounded-circle">
                 </div>
                 <h5 class="font-size-15 text-truncate">{{currentUser.lastName}} {{currentUser.lastName}}</h5>
                 <p class="text-muted mb-0 text-truncate"> {{currentUser.role}} </p>
+              </div>
+            </div>
+            <div class="col-sm-8">
+              <div class="pt-4">
+
+                <div class="row">
+                  
+                </div>
+                <div class="mt-4" *ngIf="currentUser.role=='ENCADRANT'">
+                  <a [routerLink]="['/user/editProfile/',currentUser.id]" class="btn btn-danger btn-sm">Edit Profile <i
+                      class="mdi mdi-arrow-right ms-1"></i></a>
+                </div>
+                <div class="mt-4" *ngIf="currentUser.role=='ETUDIANT'">
+                  <a [routerLink]="['/user/editStudentProfile/',currentUser.id]" class="btn btn-danger btn-sm">Edit Profile <i
+                      class="mdi mdi-arrow-right ms-1"></i></a>
+                </div>
               </div>
             </div>
           </div>
